# mcp-echo

./: .env.example  .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json  server.py
.github/workflows/: build-bundle.yml  ci.yaml  test-mpak-announce.yml
e2e/: __init__.py  conftest.py  test_e2e_docker.py  test_e2e_mcpb.py
scripts/: build-bundle.sh
src/mcp_echo/: __init__.py  api_models.py  server.py
tests/: __init__.py  test_server.py
